--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # ----------- CONFIGURABLE START -----------
 title:            "Chesky's Blog"
-description:      "hh"
+description:      "boring life"
 url:              http://chesky42.com # Site url, without a slash at the end.
 signoff:          "chesky" # Your name
 facebook_appid:   # APP ID for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # Set tracking, remove from /javascripts/basic.js if unwanted.
 share:            false # Turn on twitter and facebook share buttons
+future: true
 
 links:
   - name:         Posts
