--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----------- CONFIGURABLE START -----------
-title:            "Chesky's Blog"
+title:            "Velox's Blog"
 description:      "boring life"
-url:              http://chesky42.com # Site url, without a slash at the end.
-signoff:          "chesky" # Your name
+url:              http://velox42.com # Site url, without a slash at the end.
+signoff:          "危楼" # Your name
 facebook_appid:   # APP ID for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # Set tracking, remove from /javascripts/basic.js if unwanted.
 share:            false # Turn on twitter and facebook share buttons
